--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "firebase": "^8.2.6",
     "fs-extra": "^9.1.0",
-    "glob": "^7.1.6"
+    "glob": "^7.1.6",
+    "image-size": "^0.9.3",
+    "mime-types": "^2.1.28",
+    "xmlhttprequest-ssl": "^1.6.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.6",
