--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
   "author": "Michael Solati <mkslt04@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "commander": "^7.1.0",
     "firebase": "^8.2.6",
     "fs-extra": "^9.1.0",
     "glob": "^7.1.6",
     "image-size": "^0.9.3",
     "mime-types": "^2.1.28",
+    "readline-sync": "^1.4.10",
     "xmlhttprequest-ssl": "^1.6.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.6",
     "@types/glob": "^7.1.3",
     "@types/node": "^14.11.2",
+    "@types/readline-sync": "^1.4.3",
     "gts": "^3.1.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.1.3"
