--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,5 @@
     "outDir": "dist",
     "lib": ["es2018", "dom"]
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*", "types/**/*"],
 }
