--- a/package.json
+++ b/package.json
@@ -1,16 +1,35 @@
 {
   "name": "dcc-uploader",
   "version": "0.0.0",
-  "description": "",
+  "description": "Tool to upload images for developer.chrome.com and web.dev (made for Google Chrome/Web DevRel)",
   "main": "dist/index.js",
   "scripts": {
     "build": "rimraf ./dist && tsc",
     "lint": "gts lint",
     "prepare": "npm run build",
-    "start": "npm run build && node dist/cli.js"
+    "start": "npm run build && node dist/cli.js",
+    "release:major": "changelog -M && git add . && git commit -m 'chore(release): major version release' && npm version major && git push origin && git push origin --tags",
+    "release:minor": "changelog -m && git add . && git commit -m 'chore(release): minor version release' && npm version minor && git push origin && git push origin --tags",
+    "release:patch": "changelog -p && git add . && git commit -m 'chore(release): patch version release' && npm version patch && git push origin && git push origin --tags"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MichaelSolati/dcc-uploader.git"
   },
   "author": "Michael Solati <mkslt04@gmail.com>",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/MichaelSolati/dcc-uploader/issues"
+  },
+  "homepage": "https://github.com/MichaelSolati/dcc-uploader",
+  "files": [
+    "dist/**",
+    "CHANGELOG.md",
+    "LICENSE.md",
+    "package-lock.json",
+    "package.json",
+    "README.md"
+  ],
   "dependencies": {
     "commander": "^7.1.0",
     "firebase": "^8.2.6",
@@ -26,6 +45,7 @@
     "@types/glob": "^7.1.3",
     "@types/node": "^14.11.2",
     "@types/readline-sync": "^1.4.3",
+    "generate-changelog": "^1.8.0",
     "gts": "^3.1.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.1.3"
